# AirbendersHomeworks

./: CMakeLists.txt  main.cpp
Homework_1/: problem_1.cpp  problem_2.cpp
Homework_2/: problem_1.cpp  problem_2.cpp
Homework_3/: problem_1.cpp  problem_2.cpp
