cmake_minimum_required(VERSION 3.26)
project(AirbendersHomeworks)

set(CMAKE_CXX_STANDARD 20)

add_executable(HW1_P1 Homework_1/problem_1.cpp)
add_executable(HW1_P2 Homework_1/problem_2.cpp)

add_executable(HW2_P1 Homework_2/problem_1.cpp)
add_executable(HW2_P2 Homework_2/problem_2.cpp)

add_executable(HW3_P1 Homework_3/problem_1.cpp)
#add_executable(HW3_P2 Homework_3/problem_2.cpp)
#
#add_executable(HW4_P1 Homework_4/problem_1.cpp)
#add_executable(HW4_P2 Homework_4/problem_2.cpp)
#
#add_executable(HW5_P1 Homework_5/problem_1.cpp)
#add_executable(HW5_P2 Homework_5/problem_2.cpp)
